# simple_python_package

./: README.md  pyproject.toml
python_core/: __init__.py  say_hello.py
